--- a/musselcracker-cma/package.json
+++ b/musselcracker-cma/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@kolkov/angular-editor": "^2.0.0",
     "keycloak-angular": "^9.1.0",
     "keycloak-js": "^16.1.1",
     "rxjs": "~7.4.0",
