add data service

--- a/musselcracker-headless/src/main/resources/application.properties
+++ b/musselcracker-headless/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# CORS
+quarkus.http.cors.origins=http://localhost:4200
+quarkus.http.cors.methods=GET,OPTIONS
+quarkus.http.cors=true
+
+# Cassandra
 quarkus.cassandra.contact-points=127.0.0.1:9042
 quarkus.cassandra.local-datacenter=datacenter1
 quarkus.cassandra.keyspace=cms
